fixed alignment again

--- a/css/style.css
+++ b/css/style.css
@@ -759,11 +759,12 @@ body.exhibits.summary, body.exhibits.show {
   position: absolute;
   width: 100%;
   height: 100% !important;
-  top: 51px;
+  top: 0;
   left: 0;
   z-index: -1000;
   background-repeat: no-repeat;
   background-position: center;
+  background-position-y: 51px;
   background-size: cover;
 }
 
